--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,14 @@
 .hidden{
     display: none;
 }
+
+img{
+    height: 100%;
+    width: 100%;
+    z-index: 0;
+    opacity: 0.5;
+}
+
+body{
+    z-index: 1;
+}
