--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,14 +1,26 @@
-.hidden{
+@import "clock.css";
+@import "fullscreen.css";
+@import "greetings.css";
+@import "quote.css";
+@import "reset.css";
+@import "todo.css";
+@import "weather.css";
+
+
+
+.hidden {
     display: none;
 }
 
-img{
-    height: 100%;
-    width: 100%;
-    z-index: 0;
-    opacity: 0.5;
+
+body {
+    margin: 0 auto;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+
 }
 
-body{
-    z-index: 1;
-}
+
+
+
+
